# Estate-Optimization-Engine

./: .env.example  Cargo.toml  INFO.md  README.md  main.rs
.github/workflows/: audit.yml  ci.yml
api/: contracts.rs  handler.rs  http.rs  mod.rs
api/contracts/: common.rs  errors.rs  rules.rs  scenario.rs
api/http/: routes.rs  state.rs
core/: mod.rs  models.rs  optimizer.rs  scenario.rs  scoring.rs  tax-rules.rs
core/domain/: models.rs
core/engine/: mod.rs  optimizer.rs  scenario.rs  scoring.rs
core/errors/: errors.rs  mod.rs
core/rules/: mod.rs  tax_rules.rs
core/validation/: mod.rs  validation.rs
docs/: API.md
jurisdictions/: mod.rs
jurisdictions/south-africa/: README.md  south-africa.rs
jurisdictions/south_africa/: README.md  mod.rs
jurisdictions/us/: README.md  mod.rs
simulation/: mod.rs  monet-carlo.rs  monet_carlo.rs
tests/: api_contract_dto_tests.rs  api_error_contract_tests.rs  api_http_tests.rs  api_registry_tests.rs  api_rule_selection_tests.rs  api_rules_contract_tests.rs  mod.rs  rule_registry_tests.rs  scenario_tests.rs  validation_tests.rs
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.css  App.tsx  index.css
web/src/components/: DashboardSidebar.tsx  DashboardTopBar.tsx  DocumentWorkflowForm.tsx  EngineResultsPanel.tsx  EstateDocumentsForm.tsx  HealthChecksForm.tsx  HeroSection.tsx  OverviewCards.tsx  PayloadPanel.tsx  RulesExplorerForm.tsx  ScenarioBuilderForm.tsx  ScenarioCandidatesForm.tsx  ScenarioDraftEditor.tsx  StatusMessage.tsx  WorkflowTabs.tsx
web/src/lib/: apiClient.ts  (+5 more)
(+2 files in other folders)
