[package]
name = "estate-optimization-engine"
version = "0.1.0"
edition = "2021"
autotests = false

[[bin]]
name = "estate-optimization-engine"
path = "main.rs"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.44.0", features = ["rt-multi-thread", "macros", "net"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dotenvy = "0.15.7"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
